--- a/src/Diagrams/components/index.scss
+++ b/src/Diagrams/components/index.scss
@@ -154,14 +154,29 @@
   border: 1px solid #444;
   border-radius: 4px;
 
+  align-items: center;
+
+  .separator {
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    padding-left: 1px;
+    height: 25px;
+    margin: 0 3px;
+  }
+
   .tool {
     padding: 6px;
     border: 1px solid #888;
     border-radius: 4px;
     color: black;
+    transition: background-color 200ms;
   }
 
   .tool.selected {
-    background: #ccc
+    background: #b6bbda
+  }
+
+  .tool:active {
+    background: #aaa
   }
 }
