some progress on better paths finding save and restore state

--- a/src/Diagrams/components/index.scss
+++ b/src/Diagrams/components/index.scss
@@ -38,6 +38,13 @@
   }
 }
 
+.diagram__node__gateway {
+  &:hover path {
+    fill: greenyellow;
+    stroke: greenyellow;
+  }
+}
+
 .diagram__node_tools {
   position: absolute;
   background-color: white;
